# meat

./: .gitignore  .pylintrc  animal_welfare_certifications.csv
backend/: config.py  database.py  main.py  makefile  model.py  models.py  pyproject.toml  storage.db
