[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Phoenix Sheppard",email = "phoenixsheppard28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=6.0.0,<7.0.0)",
    "ruff (>=0.12.7,<0.13.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
